# submodules

./: README.md
database/: CMakeLists.txt  README.md  database_operate_sdk.md
database/doc/: introduce.md
database/src/api/: dbom_api.cpp  dbom_api.h
database/src/basic/: Basic_db.h
database/src/common/: Datatype.h  MysqlType.h
database/src/common/include/: mysql.h
database/src/mysql/: Ctmysql.cpp  Ctmysql.h
database/test/: test.cpp
log/: README.md
log/c++/: fdoglogconf.conf  fdoglogger.cpp  fdoglogger.h  filemanagement.cpp  filemanagement.h
log/clog/: Log.h  main.cpp
ngac/: README.md  main.py  post.py  post_parse.py
socket/: README.md
socket/TCP/: client2.cpp  client_base.cpp  server_base.cpp
socket/TCP/socketcommon/: socketcommon.cpp  socketcommon.h
socket/TCP/thread_socket/: Client.cpp  Service.cpp  makefile
socket/TCP/thread_socket/Task/: CMyTask.cpp  CMyTask.h  CTask.cpp  CTask.h
socket/TCP/thread_socket/Thread/: Thread.cpp  Thread.h
socket/UDP/Broadcast_UDP广播/servicediscovery/: CMakeLists.txt  README.md
socket/UDP/Broadcast_UDP广播/servicediscovery/client/: Client.cpp  Client.h
socket/UDP/Broadcast_UDP广播/servicediscovery/clog/: Log.cpp
socket/UDP/Broadcast_UDP广播/servicediscovery/server/: Server.cpp  Server.h
socket/UDP/Broadcast_UDP广播/servicediscovery/test/: serviceDiscoveryClient.cpp  serviceDiscoveryServer.cpp
socket/UDP/Broadcast_UDP广播/usual/: recrive.cpp  send.cpp
socket/UDP/Mulicast_UDP组播/: client.cpp  server.cpp
socket/UDP/Unicast_UDP单播/: client.cpp  server.cpp
socket/doc/: 全双工通信.md  学习笔记.md  问题记录.md
